RESOLVED FIXED177894
RenderMultiColumnFlow populate/evacuate should not disable layout state.
https://bugs.webkit.org/show_bug.cgi?id=177894
Summary RenderMultiColumnFlow populate/evacuate should not disable layout state.
alan
Reported 2017-10-04 13:06:53 PDT
They are not performed at layout time.
Attachments
Patch (2.14 KB, patch)
2017-10-04 13:09 PDT, alan
no flags
Radar WebKit Bug Importer
Comment 1 2017-10-04 13:07:31 PDT
alan
Comment 2 2017-10-04 13:09:20 PDT
Antti Koivisto
Comment 3 2017-10-04 13:49:28 PDT
Comment on attachment 322709 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=322709&action=review > Source/WebCore/ChangeLog:9 > + Populate/evacuate methods are not called at layout time. Maybe we could assert in LayoutStateDisabler that we do have a layout state?
alan
Comment 4 2017-10-04 13:50:05 PDT
(In reply to Antti Koivisto from comment #3) > Comment on attachment 322709 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=322709&action=review > > > Source/WebCore/ChangeLog:9 > > + Populate/evacuate methods are not called at layout time. > > Maybe we could assert in LayoutStateDisabler that we do have a layout state? Good idea!
WebKit Commit Bot
Comment 5 2017-10-04 14:29:54 PDT
Comment on attachment 322709 [details] Patch Clearing flags on attachment: 322709 Committed r222881: <http://trac.webkit.org/changeset/222881>
WebKit Commit Bot
Comment 6 2017-10-04 14:29:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.