RenderMultiColumnFlow populate/evacuate should not disable layout state. https://bugs.webkit.org/show_bug.cgi?id=177894 <rdar://problem/34818696>

Reviewed by Antti Koivisto.

Populate/evacuate methods are not called at layout time.

Covered by existing tests.

* rendering/RenderMultiColumnFlow.cpp:
(WebCore::RenderMultiColumnFlow::populate):
(WebCore::RenderMultiColumnFlow::evacuateAndDestroy):


Canonical link: https://commits.webkit.org/194159@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@222881 268f45cc-cd09-0410-ab3c-d52691b4dbfc